--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -23,7 +23,7 @@
         text-align: center;
         padding: 2vh;
 position: relative;
-top: 3vh;
+top: 7vh;
 font-size: 7vw;
         font-family:Arial, Helvetica, sans-serif;
     }
@@ -40,11 +40,10 @@ top: 3vh;
         border: 3px solid green;
         /* background-color: rgb(224, 223, 223); */
         color: rgb(14, 10, 231);
+        /* box-shadow: white 99px 7px 7px; */
     }
 
-    .card-text {
-        /* color: rgb(224, 93, 93); */
-    }
+    
 
     h3 {
         font-size: 7vw;
