--- a/templates/home/Add_patient.html
+++ b/templates/home/Add_patient.html
@@ -67,11 +67,9 @@
                      <option value="7">Ab -</option>
                      <option value="8">O -</option>
               </select>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Patient Date of Discharge</label>
-          <input type="text" name="pdod" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-        </div>
+   
+        <label for="birthday">Birthday:</label>
+  <input type="date" id="birthday" name="pdod" class="form-control" name="birthday">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Patient Age</label>
           <input type="text" name="p_age" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
