--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -49,7 +49,7 @@
               min-width: 300px;
               overflow: hidden;
 
-              {% comment %} background-color: red; {% endcomment %}
+       background-color: red;
 
        }
 
@@ -98,6 +98,16 @@ img{
            margin:auto;
            width: 100px;
     }
+    .flagimg{
+           width: 10vw;
+           height:10vh ;
+           position: absolute;
+           top: 20vh;
+           left: 10vw;
+           z-index: 8998;
+           opacity: 1;
+
+    }
 
     
 </style>
@@ -119,9 +129,11 @@ type="text/css">
 
 <div class="flx">
        <div id="o">
-       
+              
        </div>
        <div class="left">
+              <div id="flag">
+              </div>
               <div class="f">
 
               <select class="form-select change1  wdth mt-2" style="float: left;" onchange="myFunction2()"
@@ -149,8 +161,8 @@ type="text/css">
 
               </div>
               <div class="mp">
-              <div class="dataishere">
-                     <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+                     <div class="dataishere">
+                     <canvas id="myChartC" style="width:100%;max-width:600px"></canvas>
               </div>
        </div>
 
@@ -181,5 +193,5 @@ type="text/css">
 {% block js %}
 
 {% load static %}
-<script src="{% static 'static.js' %}"></script>
+<script src="{% static 'staticSSSSSSSS.js' %}"></script>
 {% endblock js %}
