--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -193,5 +193,5 @@ type="text/css">
 {% block js %}
 
 {% load static %}
-<script src="{% static 'staticSSSSSSSS.js' %}"></script>
+<script src="{% static 'static.js' %}"></script>
 {% endblock js %}
