--- a/templates/home/Add_patient.html
+++ b/templates/home/Add_patient.html
@@ -68,7 +68,7 @@
                      <option value="8">O -</option>
               </select>
    
-        <label for="birthday">Birthday:</label>
+        <label for="birthday">Date Of Discharge</label>
   <input type="date" id="birthday" name="pdod" class="form-control" name="birthday">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Patient Age</label>
