--- a/templates/base.html
+++ b/templates/base.html
@@ -366,7 +366,13 @@
           {% if request.user.is_authenticated %}
 
           <a href="/profile">
-            <button class="btn-hover color-3">{{user}}</button></a>
+            {% if user.first_name == '{"G":"Wa"}' %}
+            <button class="btn-hover color-3">{{user.username}}</button></a>
+            {% else %}
+            <button class="btn-hover color-3">{{user.username}}</button></a>
+
+            {% endif %}
+
 
 
           {% else %}
