--- a/templates/blog/blogPost.html
+++ b/templates/blog/blogPost.html
@@ -46,20 +46,97 @@
   text-decoration: none;
   cursor: pointer;
 }
-img{
-  width: 300px;
-}
-
-
-
-    
 
  
+      
+      .blog_image{
+        min-width: 10px;
+        max-width: 80%;
+        /* display:inline-block; */
+        float: left;
+/* padding: 4px; */
+margin: 15px;      }
+
+#heading{
+  font-size: 2.8em;
+  padding-top: 10px;
+  /* margin: ; */
+  color:rgb(0, 0, 0) ;
+font-family: 'Times New Roman', Times, serif;}
+
+
+.aut{
+  color: rgb(230, 42, 42);
+  font-size: 2em;
+font-family: 'Times New Roman', Times, serif;}
+#time{
+  font-size: 0.8em;
+  font-family: cursive;
+}
+.ff{
+margin-left: 20vh;
+margin-top: 10vh;  
+margin-bottom: 3vh;  
+
+}
+.lik{
+  margin-left: 20vh;
+margin-top: 2vh;  
+margin-bottom: 3vh; 
+}
+
+    
 </style>
 {% endblock css %}
 
+ 
+
 {% block body %}
-<div class="container">
+
+
+
+
+
+
+
+ {% if post.blog_img != "exampleImage" %}
+  <img class="blog_image" src="media/{{post.blog_img}}" alt="image">
+
+ {% endif %}
+<h2 id="heading">{{post.title}}</h2>
+<!-- <br> -->
+By
+<span class="aut"> {{post.author}} </span>
+
+<span id="time">
+  {{post.Timestamp | slice:"0:11"}} :: <b>{{post.Timestamp | slice:"11:16"}} </b></span>
+<p>
+  {% autoescape off %}{{post.content}}{% endautoescape %}
+</p>
+
+
+
+
+
+<div class="ff">
+<div class="b">
+
+
+  <a href="/blog" class="btn btn-warning">Back</a>
+  {% if post.authorUsername == userp.U %}
+  <a href="/blog/delB/{{post.sno}}" class="btn btn-danger">Delete</a>
+  
+  
+  {% elif userp.G == "e" %}
+  <a href="/blog/delB/{{post.sno}}" class="btn btn-danger">Delete</a>
+  
+  
+  {% endif %} 
+  <button id="myBtn" class="btn btn-primary">Report</button>
+</div></div>
+      
+<!-- 
+  <div class="container">
   <div class="card my-2 animatn">
  {% if post.blog_img != "exampleImage" %}
   <img class="blog_image" src="media/{{post.blog_img}}" alt="image">
@@ -86,15 +163,11 @@ img{
     <a href="/blog/delB/{{post.sno}}" class="btn btn-danger">Delete</a>
 
 
-{% endif %}
- {% comment %} {% if user.is_authenticated %}
-    <a href="/blog/delB/{{post.sno}}" class="btn btn-warning">Report</a>
-        
-    {% endif %} {% endcomment %}
- <h2>Modal Example</h2>
+{% endif %} -->
+ 
+
 
 <!-- Trigger/Open The Modal -->
-<button id="myBtn">Report</button>
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
@@ -125,9 +198,9 @@ img{
 
 </div>
     </div>
-<div class="fb-like" data-href="https://covid-survivorsiitisoc.herokuapp.com/blog/{{post.sno}}" data-width="" data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
+<div class="fb-like lik" data-href="https://covid-survivorsiitisoc.herokuapp.com/blog/{{post.sno}}" data-width="100%" data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
     <div class="container">
-    <div class="fb-comments" data-href="https://covid-survivorsiitisoc.herokuapp.com/blog/{{post.sno}}" data-width="" data-numposts="3"></div>
+    <div class="fb-comments" data-href="https://covid-survivorsiitisoc.herokuapp.com/blog/{{post.sno}}" data-width="100%" data-numposts="3"></div>
     </div>
 
 
