--- a/templates/base.html
+++ b/templates/base.html
@@ -76,11 +76,17 @@
 
 
     .nn {
-      max-height: 12vh;
+      max-height: 128vh;
+    }
+    .rotated{
+      
+      transform: rotate(360deg);
+      background-color: rgb(0, 255, 229);
+    
     }
 
     .tran {
-      transition: max-height 2s;
+      transition: max-height ease-out 0.7s;
       font-size: 1.1em;
     }
 
@@ -252,7 +258,7 @@
       border-bottom-right-radius: 7px;
       visibility: hidden;
       display: inline-block;
-      top: 11vh;
+      top: 12vh;
       z-index: 300;
       box-shadow: rgb(113, 1, 1) 3px 5px 7px;
 
@@ -278,7 +284,7 @@
       border-bottom-right-radius: 7px;
       visibility: hidden;
       z-index: 300;
-      top: 11vh;
+      top: 12vh;
 
       animation: l 4s ease-out -0.2s 1;
     }
@@ -330,6 +336,18 @@
 
 
     }
+    #togg{
+      width: 40px;
+      height: 40px;
+      border-radius: 20px;
+      /* filter: invert(1); */
+      z-index: 9899898;
+  
+      position: relative;
+      top: -16px;
+      left: -10px;
+      transition: all 0.7s;
+    }
   </style>
 
 
@@ -340,8 +358,10 @@
 
 <body>
   <div id="j">
+
     <header id="i" class="p-3 bg-dark nn tran text-white">
-      <a id="x">X</a>
+      {% load static %}
+      <a id="x"> <img id="togg" src="{% static "imgs/menu.png" %}" alt=""> </a>
       <div id="navbar" class="container">
         <div id="navbar2" class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
@@ -366,8 +386,8 @@
           {% if request.user.is_authenticated %}
 
           <a href="/profile">
-            {% if user.first_name == '{"G":"Wa"}' %}
-            <button class="btn-hover color-3">{{user.username}}</button></a>
+            {% if user.first_name|length < 20 %}
+            <button class="btn-hover color-3">{{user.first_name}}</button></a>
             {% else %}
             <button class="btn-hover color-3">{{user.username}}</button></a>
 
@@ -449,6 +469,9 @@
 
     document.getElementById("x").addEventListener('click', () => {
 
+    document.getElementById('togg').classList.toggle('rotated');
+
+
 
       if (tap % 2 !== 0) {
         document.getElementById("i").classList.remove("nn")
@@ -457,7 +480,8 @@
         tap = tap + 1;
       }
       else if (tap % 2 === 0) {
-        document.getElementById("i").style.maxHeight = "9vh";
+        document.getElementById("i").style.maxHeight = "7vh";
+
 
 
         tap = tap + 1;
