--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -16,8 +16,8 @@
        }
 
        #map {
-              height: 85vh;
-              width: 34vw;
+              height: 98vh;
+              width: 38vw;
 
 
        }
@@ -45,23 +45,14 @@
               width: 10vw;
               height: 10vh;
               position: absolute;
-              top: 20vh;
-              left: 10vw;
+              top: 40vh;
+              left: 45vw;
               z-index: 8998;
               opacity: 1;
 
        }
 
-       #gl {
-              /* grid-area: showdata; */
-
-       }
-
-       #gr {
-              /* grid-area: mapp; */
-
-
-       }
+    
 
        #gridd {
               display: grid;
@@ -71,15 +62,18 @@
 
        }
 
+       #gr{
+              height: 98vh;
+       }
        #gridd>div {
               /* background-color:rgb(12, 12, 86) ; */
-              background-image: linear-gradient(rgb(195, 248, 238), rgb(231, 160, 247));
+              background-image: linear-gradient(45deg,rgb(171, 138, 255), rgb(183, 255, 197));
 
        }
-      #gl > select{
+      #gl > .outer> select{
               width: 25%;
               /* background-color: rgb(235, 236, 255); */
-              margin: auto;
+              margin: 5px;
               color: rgb(0, 0, 52);
               display: inline-block;
               position: relative;
@@ -90,6 +84,164 @@
               margin: auto;
               margin: 5px 9px;
        }
+       .change1{
+              float: left;
+              
+       }
+       .change2{
+              float: left;
+       }
+       .change3{
+float: left;
+
+       }
+       .outer{
+
+       }
+       #ff{
+width: 50vw;
+margin: auto;    
+   }
+
+
+.vacc{
+       display: flex;
+       width: 95vw;
+       margin: auto;
+       flex-wrap: wrap;
+       justify-content: center;
+         flex-direction: row;
+       /* display: inline-block; */
+       margin-bottom: 9vh;
+}
+ .box{
+       height: 20vh;
+       max-width: 14vw;
+       min-width: 200px;
+       margin-left: 5px;
+       margin-bottom: 10px;
+       /* box-shadow: chartreuse 5px 5px 5px; */
+       color: white;
+       display: flex;
+       flex-direction: column;
+align-items: center;     
+  justify-content: center;
+  font-size: 150%;
+  transition: all 0.5s;
+
+}
+.box:hover{
+  box-shadow: rgb(0, 0, 0) 4px 7px 7px;
+
+}
+#dc{
+       background-color: #0088ff;
+}
+#dd{
+       background-color: rgb(255, 0, 0);
+}
+#dr{
+       background-color: rgb(38, 0, 255);
+}
+#td{
+       background-color: rgb(255, 88, 88);
+}
+#tr{
+       background-color: rgb(90, 233, 255);
+}
+#tc{
+       background-color: rgb(221, 8, 218);
+}
+#v{
+       background-color: #00e400;
+}
+.box b{
+       font-family: 'Times New Roman', Times, serif;
+
+}
+.hdd{
+       width: 100%;
+       height: 40px;
+       text-align: center;
+       background-color: rgb(0, 0, 84);
+       color: white;
+       font-size: 1.4em;
+       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+
+
+
+/* mediaaaaaaaaaaaaaaaaaaaaaaaa */
+
+@media only screen and (max-width: 886px) {
+      
+       #gridd {
+              display: grid;
+              grid-template-columns: 1fr;
+       }
+
+
+       #gl{
+              position: relative;
+              top: 46vh;
+       }
+
+
+
+       #gr{
+              position: absolute;
+              height: 10vh;
+              width: 100%;
+       }
+       #map {
+              height: 46vh;
+              width: 100vw;
+
+
+       }
+       .flagimg {
+             display: none;
+
+       }
+       #gl > .outer> select{
+              width: 31%;
+              /* background-color: rgb(235, 236, 255); */
+              margin: 2px;
+              color: rgb(0, 0, 52);
+              display: inline-block;
+              position: relative;
+       }
+
+       #gl > button{
+            
+              margin: auto;
+              margin: 2px 3px;
+              padding: 5px 4px;
+       }
+       .vacc{
+       display: flex;
+       position: relative;
+       top: 50vh;
+       width: 95vw;
+       margin: auto;
+       flex-wrap: wrap;
+       justify-content: center;
+         flex-direction: row;
+       /* display: inline-block; */
+       margin-bottom: 9vh;
+}
+
+
+
+       #ff{
+width: 95vw;
+margin: auto;       }
+
+
+
+
+    }
     
 </style>
 
@@ -111,29 +263,43 @@
        <div id="gl">
               <div id="flag">
               </div>
+              <div class="outer">
               <select class="form-select change1  wdth mt-2" onchange="myFunction2()" id="country"
                      onmousedown="if(this.options.length>5){this.size=5;}" onchange="this.blur()" onblur="this.size=0;"
                      aria-label="Default select example">
                      <option selected>Country</option>
        
               </select>
-              <select disabled class="form-select change1 wdth mt-2"
+              <select disabled class="form-select change2 wdth mt-2"
                      onchange="myFunction()" onmousedown="if(this.options.length>5){this.size=5;}" onchange="this.blur()"
                      onblur="this.size=0;" id="state" aria-label="Default select example">
                      <option selected>State</option>
        
               </select>
-              <select disabled class="form-select wdth  mt-2" onchange="myFunction1()" id="dist"
+              <select disabled class="form-select change3 wdth  mt-2" onchange="myFunction1()" id="dist"
                      aria-label="Default select example" onmousedown="if(this.options.length>5){this.size=5;}"
                      onchange="this.blur()" onblur="this.size=0;" id="state" aria-label="Default select example">
                      <option>District</option>
        
               </select>
+
+       </div>
               <button id="DataShown" type="button" style="z-index: -4; float:right;" class="btn-hover color-10">Search</button>
        
-       
-                     <canvas id="myChartC" style="width:100%;max-width:600px"></canvas>
 
+              <div id="ff">
+                     <div id="CS">
+
+                            
+                            <canvas id="myChartCS" style="width:100%;max-width:600px"></canvas>
+                     </div>
+                     <div id="SD">
+
+                            
+                            <canvas id="myChartSD" style="width:100%;max-width:600px"></canvas>
+                     </div>
+                     
+              </div>
 
 
        </div>
@@ -145,10 +311,98 @@
        </div>
 
 </div>
+<img src="" alt="" class="flg">
+<div class="vacc">
+<div class="hdd">India</div>
+
+<div id="dc" class="box">
+       <b>  Daily Confirmed</b>
+       <h3 id="dcc"></h3>
+
+</div>
+<div id="dd" class="box">
+       <b>Daily Deaths</b>
+       <h3 id="ddd"></h3>
+
+</div>
+<div id="dr" class="box">
+       <b>Daily Recovered</b>
+       <h3 id="drr"></h3>
+
+</div>
+<div id="v" class="box">
+       <b>Fully Vaccinated</b>
+       <h3 id="vv"></h3>
+
+</div>
+<div id="tc" class="box">
+       <b>Total Confirmed</b>
+       <h3 id="tcc"></h3>
+
+</div>
+<div id="td" class="box">
+       <b>Total Deaths</b>
+       <h3 id="tdd"></h3>
+
+</div>
+<div id="tr" class="box">
+       <b>Total Recovered</b>
+       <h3 id="trr"></h3>
+
+</div>
+
+</div>
+<script>
+
+</script>
 
 
-
-
+  {% comment %} <script>
+           var xValues = ["Active", "France", "Spain", "USA", "Argentina"];
+                                var yValues = [550, 49, 44, 24, 15];
+                                var barColors = ["red", "green","blue","orange","brown"];
+            
+                                new Chart("myChartCS", {
+                                type: "bar",
+                                data: {
+                                    labels: xValues,
+                                    datasets: [{
+                                    backgroundColor: barColors,
+                                    data: yValues
+                                    }]
+                                },
+                                options: {
+                                    indexAxis: 'y',
+                                    legend: {display: false},
+                                    title: {
+                                    display: true,
+                                    text: "World Wine Production 2018"
+                                    }
+                                }
+                                });
+           var xValues = ["Active", "France", "Spain", "USA", "Argentina"];
+                                var yValues = [550, 49, 44, 24, 15];
+                                var barColors = ["red", "green","blue","orange","brown"];
+            
+                                new Chart("myChartSD", {
+                                type: "bar",
+                                data: {
+                                    labels: xValues,
+                                    datasets: [{
+                                    backgroundColor: barColors,
+                                    data: yValues
+                                    }]
+                                },
+                                options: {
+                                    indexAxis: 'y',
+                                    legend: {display: false},
+                                    title: {
+                                    display: true,
+                                    text: "World Wine Production 2018"
+                                    }
+                                }
+                                });
+</script>  --> {% endcomment %}
 
 
 
@@ -174,8 +428,8 @@
 
 {% endblock %}
 
-{% block js %}
+  {% block js %}
 
 {% load static %}
 <script src="{% static 'static.js' %}"></script>
-{% endblock js %}
+{% endblock js %} 
