--- a/templates/base.html
+++ b/templates/base.html
@@ -372,6 +372,7 @@
             <li><a href="/donors" class="nav-link px-2 text-white">Donors</a></li>
 
             <li><a href="/blog" class="nav-link px-2 text-white">Blog</a></li>
+            <li><a href="/livechat" class="nav-link px-2 text-white">Chat</a></li>
 
 
             <li><a href="/contactus" class="nav-link px-2 text-white">Contact Us</a></li>
